@@ -5,6 +5,8 @@ New in 6.0 version:
     (Tae-Yun Kim, Andrea Ferretti, Cheol-Hwan Park)
   * Lin Lin's ACE (Adaptively Compressed Exchange) for hybrid functionals
     (Ivan Carnimeo)
+  * Improved real-space treatment of Q and beta functions with Fourier
+    filtering (Stefano de Gironcoli)
 
 Fixed in 6.0 version:
 
@@ -35,6 +37,7 @@ Incompatible changes in 6.0 version:
     become local and point to global variables "ngk" and "igk_k", via the
     k-point index "ik" or, in LR codes, via "ikks" and "ikkq" indices.
     The global variables are computed once, stored in memory, no I/O is done.
+    Variable "iunigk" deleted (contained unit for I/O of indices).
   * "nbnd_occ" variable is now dynamically allocated
   * Duplicated and confusing "outdir" variable removed from "io_files"
   * Due to frequent problems with mailers, "make.sys" is now "make.inc"
